force-app/main/default/objects/gamingdata__x/gamingdata__x.object-meta.xml
<CustomObject>
    <description>gamingdata</description>
    <externalDataSource>Cosmos_DB</externalDataSource>
    <externalName>gamingdata</externalName>
    <label>gamingdata</label>
    <pluralLabel>gamingdata</pluralLabel>
</CustomObject>