force-app/main/default/objects/gamingdata__x/fields/ADT_InclFreePlay__c.field-meta.xml
<CustomField>
    <fullName>ADT_InclFreePlay__c</fullName>
    <description>ADT_InclFreePlay</description>
    <externalDeveloperName>ADT_InclFreePlay</externalDeveloperName>
    <label>ADT_InclFreePlay</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>