force-app/main/default/objects/gamingdata__x/fields/AverageBet__c.field-meta.xml
<CustomField>
    <fullName>AverageBet__c</fullName>
    <description>AverageBet</description>
    <externalDeveloperName>AverageBet</externalDeveloperName>
    <label>AverageBet</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>