force-app/main/default/objects/gamingdata__x/fields/CreateDt__c.field-meta.xml
<CustomField>
    <fullName>CreateDt__c</fullName>
    <description>CreateDt</description>
    <externalDeveloperName>CreateDt</externalDeveloperName>
    <label>CreateDt</label>
    <type>DateTime</type>
</CustomField>