force-app/main/default/objects/gamingdata__x/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>ExternalID</description>
    <externalDeveloperName>ExternalID</externalDeveloperName>
    <label>ExternalID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>