force-app/main/default/objects/gamingdata__x/fields/FreePlay__c.field-meta.xml
<CustomField>
    <fullName>FreePlay__c</fullName>
    <description>FreePlay</description>
    <externalDeveloperName>FreePlay</externalDeveloperName>
    <label>FreePlay</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>