force-app/main/default/objects/gamingdata__x/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Frequency</description>
    <externalDeveloperName>Frequency</externalDeveloperName>
    <label>Frequency</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>