force-app/main/default/objects/gamingdata__x/fields/LastPlayDate__c.field-meta.xml
<CustomField>
    <fullName>LastPlayDate__c</fullName>
    <description>LastPlayDate</description>
    <externalDeveloperName>LastPlayDate</externalDeveloperName>
    <label>LastPlayDate</label>
    <type>DateTime</type>
</CustomField>