force-app/main/default/objects/gamingdata__x/fields/NetTheo__c.field-meta.xml
<CustomField>
    <fullName>NetTheo__c</fullName>
    <description>NetTheo</description>
    <externalDeveloperName>NetTheo</externalDeveloperName>
    <label>NetTheo</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>