force-app/main/default/objects/gamingdata__x/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Period</description>
    <externalDeveloperName>Period</externalDeveloperName>
    <label>Period</label>
    <length>128</length>
    <type>Text</type>
</CustomField>