force-app/main/default/objects/gamingdata__x/fields/PlayType__c.field-meta.xml
<CustomField>
    <fullName>PlayType__c</fullName>
    <description>PlayType</description>
    <externalDeveloperName>PlayType</externalDeveloperName>
    <label>PlayType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>