force-app/main/default/objects/gamingdata__x/fields/PreferredVisitDay__c.field-meta.xml
<CustomField>
    <fullName>PreferredVisitDay__c</fullName>
    <description>PreferredVisitDay</description>
    <externalDeveloperName>PreferredVisitDay</externalDeveloperName>
    <label>PreferredVisitDay</label>
    <type>DateTime</type>
</CustomField>