force-app/main/default/objects/gamingdata__x/fields/SalesforceContactID__c.field-meta.xml
<CustomField>
    <fullName>SalesforceContactID__c</fullName>
    <description>SalesforceContactID</description>
    <externalDeveloperName>SalesforceContactID</externalDeveloperName>
    <label>SalesforceContactID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>