force-app/main/default/objects/gamingdata__x/fields/SalesforcePropertyID__c.field-meta.xml
<CustomField>
    <fullName>SalesforcePropertyID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SalesforcePropertyID</description>
    <externalDeveloperName>SalesforcePropertyID</externalDeveloperName>
    <label>SalesforcePropertyID</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>gamingdata</relationshipLabel>
    <relationshipName>gamingdata</relationshipName>
    <type>Lookup</type>
</CustomField>