force-app/main/default/objects/gamingdata__x/fields/Theowin_InclFreePlay__c.field-meta.xml
<CustomField>
    <fullName>Theowin_InclFreePlay__c</fullName>
    <description>Theowin_InclFreePlay</description>
    <externalDeveloperName>Theowin_InclFreePlay</externalDeveloperName>
    <label>Theowin_InclFreePlay</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>