force-app/main/default/objects/gamingdata__x/fields/TotalActual_ExclFreePlay__c.field-meta.xml
<CustomField>
    <fullName>TotalActual_ExclFreePlay__c</fullName>
    <description>TotalActual_ExclFreePlay</description>
    <externalDeveloperName>TotalActual_ExclFreePlay</externalDeveloperName>
    <label>TotalActual_ExclFreePlay</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>