force-app/main/default/objects/gamingdata__x/fields/Trips__c.field-meta.xml
<CustomField>
    <fullName>Trips__c</fullName>
    <description>Trips</description>
    <externalDeveloperName>Trips</externalDeveloperName>
    <label>Trips</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>