force-app/main/default/objects/gamingdata__x/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <description>Turnover</description>
    <externalDeveloperName>Turnover_ExclFreePlay</externalDeveloperName>
    <label>Turnover</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>