force-app/main/default/objects/gamingdata__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type</description>
    <externalDeveloperName>Type</externalDeveloperName>
    <label>Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>